--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -2,10 +2,16 @@
 <html>
     <head>
         <title>super super blog</title>
-        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css"/>
-        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css"/>
-        <link rel="stylesheet" href="{% static 'css/blog.css' %}"/>
+        <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+        <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" rel="stylesheet">
+        <link href="https://cdn.bootcss.com/bootstrap-markdown/2.10.0/css/bootstrap-markdown.min.css" rel="stylesheet">
         <link href="//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" rel="stylesheet" type="text/css"/>
+        <link rel="stylesheet" href="{% static 'css/blog.css' %}"/>
+        
+        <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.js"></script>
+        <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.js"></script>
+        <script src="https://cdn.bootcss.com/bootstrap-markdown/2.10.0/js/bootstrap-markdown.min.js"></script>
+        <script src="https://cdn.bootcss.com/marked/0.3.6/marked.js"></script>
     </head>
     <body>
         <div class="page-header">
@@ -30,9 +36,11 @@
 
         <div class="content container">
             <div class="row">
-                <div class="col-md-8">
+                <div id="row_left" class="col-md-8">
                     {% block content %}
                     {% endblock %}
+                </div>
+                <div id="row_right">
                 </div>
             </div>
             <div>
