--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -1,52 +1,137 @@
 {% load staticfiles %}
 <html>
-    <head>
-        <title>super super blog</title>
-        <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-        <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" rel="stylesheet">
-        <link href="https://cdn.bootcss.com/bootstrap-markdown/2.10.0/css/bootstrap-markdown.min.css" rel="stylesheet">
-        <link href="//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" rel="stylesheet" type="text/css"/>
-        <link rel="stylesheet" href="{% static 'css/blog.css' %}"/>
-        
-        <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.js"></script>
-        <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.js"></script>
-        <script src="https://cdn.bootcss.com/bootstrap-markdown/2.10.0/js/bootstrap-markdown.min.js"></script>
-        <script src="https://cdn.bootcss.com/marked/0.3.6/marked.js"></script>
-    </head>
-    <body>
-        <div class="page-header">
-            {% if user.is_authenticated %}
-                <a href="{% url 'logout' %}" class="top-menu">
-                    <span class="glyphicon glyphicon-log-out">
-                </a>
-                <a href="{% url 'post_draft_list' %}" class="top-menu">
-                    <span class="glyphicon glyphicon-align-left"></span>
-                </a>
-                <a href="{% url 'post_new' %}" class="top-menu">
-                    <span class="glyphicon glyphicon-edit"></span>
-                </a>
-                <p class="top-menu">
-                    <small>Hello {{ user.username }} </small>
-                </p>
-            {% else %}
-            <a href="{% url 'login' %}" class="top-menu"><span class="glyphicon glyphicon-lock"></span></a>
-            {% endif %}
-            <h1><a href="/">Super Super Blog</a></h1>
-        </div>
+<head>
 
-        <div class="content container">
-            <div class="row">
-                <div id="row_left" class="col-md-8">
-                    {% block content %}
-                    {% endblock %}
+    <title>super super blog</title>
+    <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" rel="stylesheet">
+    <link href="https://cdn.bootcss.com/bootstrap-markdown/2.10.0/css/bootstrap-markdown.min.css" rel="stylesheet">
+    <link href="//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" rel="stylesheet" type="text/css"/>
+    <link rel="stylesheet" href="{% static 'css/blog.css' %}"/>
+    
+    <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.js"></script>
+    <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.js"></script>
+    <script src="https://cdn.bootcss.com/bootstrap-markdown/2.10.0/js/bootstrap-markdown.min.js"></script>
+    <script src="https://cdn.bootcss.com/marked/0.3.6/marked.js"></script>
+
+</head>
+<body>
+
+<div class="container" style="margin-top:50px;width:100%;">
+    <div class="row clearfix">
+        <div class="col-md-12 column">
+            <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+                <div class="navbar-header">
+                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> <span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button> <a class="navbar-brand" href="#">Brand</a>
                 </div>
-                <div id="row_right">
+                
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                    <ul class="nav navbar-nav">
+                        <li class="active">
+                             <a href="#">Link</a>
+                        </li>
+                        <li>
+                             <a href="#">Link</a>
+                        </li>
+                        <li class="dropdown">
+                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown<strong class="caret"></strong></a>
+                            <ul class="dropdown-menu">
+                                <li>
+                                     <a href="#">Action</a>
+                                </li>
+                                <li>
+                                     <a href="#">Another action</a>
+                                </li>
+                                <li>
+                                     <a href="#">Something else here</a>
+                                </li>
+                                <li class="divider">
+                                </li>
+                                <li>
+                                     <a href="#">Separated link</a>
+                                </li>
+                                <li class="divider">
+                                </li>
+                                <li>
+                                     <a href="#">One more separated link</a>
+                                </li>
+                            </ul>
+                        </li>
+                    </ul>
+                    <form class="navbar-form navbar-left" role="search">
+                        <div class="form-group">
+                            <input type="text" class="form-control" />
+                        </div> <button type="submit" class="btn btn-default">Submit</button>
+                    </form>
+                    <ul class="nav navbar-nav navbar-right">
+                        <li>
+                             <a href="#">Link</a>
+                        </li>
+                        <li class="dropdown">
+                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown<strong class="caret"></strong></a>
+                            <ul class="dropdown-menu">
+                                <li>
+                                     <a href="#">Action</a>
+                                </li>
+                                <li>
+                                     <a href="#">Another action</a>
+                                </li>
+                                <li>
+                                     <a href="#">Something else here</a>
+                                </li>
+                                <li class="divider">
+                                </li>
+                                <li>
+                                     <a href="#">Separated link</a>
+                                </li>
+                            </ul>
+                        </li>
+                    </ul>
                 </div>
+                
+            </nav>
+        </div>
+    </div>
+    <div class="row clearfix">
+        <div class="col-md-12 column">
+            <div class="page-header">
+                {% if user.is_authenticated %}
+                    <a href="{% url 'logout' %}" class="top-menu">
+                        <span class="glyphicon glyphicon-log-out">
+                    </a>
+                    <a href="{% url 'post_draft_list' %}" class="top-menu">
+                        <span class="glyphicon glyphicon-align-left"></span>
+                    </a>
+                    <a href="{% url 'post_new' %}" class="top-menu">
+                        <span class="glyphicon glyphicon-edit"></span>
+                    </a>
+                    <p class="top-menu">
+                        <small>Hello {{ user.username }} </small>
+                    </p>
+                {% else %}
+                <a href="{% url 'login' %}" class="top-menu"><span class="glyphicon glyphicon-lock"></span></a>
+                {% endif %}
+                <h1><a href="/">Super Super Blog</a></h1>
             </div>
-            <div>
-                {% block paging %}
+        </div>
+    </div>
+    <div class="row clearfix">
+        <div id="full_or_half" class="col-md-6 column" style="width:100%;">
+            <div id="row_left" class="col-md-8">
+                {% block content %}
                 {% endblock %}
             </div>
         </div>
-    </body>
+        <div class="col-md-6 column">
+            <div id="row_right">
+            </div>
+        </div>
+    </div>
+    <div>
+        {% block paging %}
+        {% endblock %}
+    </div>
+</div>
+
+</body>
 </html>
